# CMake_Fundamental

./: .gitignore
Ep001/source/: CMakeLists.txt  main.cpp
Ep002/source/: CMakeLists.txt  main.cpp
Ep002/source/include/: LinkedList.hpp  Node.hpp
Ep002/source/src/: LinkedList.cpp  Node.cpp  lambda.cpp
